@@ -1,3 +1,7 @@
+2009-07-20  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/ldenseMatrix.R (.rcond_via_d): fix thinko
+
 2009-07-18  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* R/CHMfactor.R (isLDL): need a "!" as 'type' is "is_ll"
